# gis-script-generator

./: .coverage  .gitignore  BUILD_PROJECT.bat  CLAUDE.md  CONTINUATION_PROMPT.md  DATA_CATALOG.md  KENSINGTON_PROJECT_REPORT.html  QC_LOG.md  QGIS_PLUGINS.md  README.md  TOPOLOGY_RULES.md  TOPOLOGY_SCHEMA.md  arc_batch_import.py  arc_setup_gdb.py  arc_topology_builder.py  catalogue_inspect.txt  catalogue_rows.txt  create_analytical_views.py  create_kensington_map.py  generate_dashboard.py  generate_interactive_map.py  generate_static_map.py  gis_codegen.toml  make_pdf.py  migrate_to_sql.py  pyproject.toml  qgis_master_setup.py  reproject_to_mtm10.py  requirements.txt
.github/workflows/: ci.yml
misc/: Tree_Perc_Ash_Catcher.py
src/gis_codegen/: __init__.py  app.py  catalogue.py  cli.py  extractor.py  generator.py  layout.py
tests/: conftest.py  test_app.py  test_catalogue.py  test_extractor.py  test_generator.py  test_integration.py  test_layout.py
wiki/: Architecture.md  CLI-Reference.md  Development-and-Testing.md  Excel-Catalogue-Tool.md  FAQ.md  Getting-Started.md  Home.md  Kensington-Project.md  Operations-Reference.md  Platform-Guide.md  Troubleshooting.md  Web-UI-Guide.md
