[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-codegen"
version = "0.1.0"
description = "Generate PyQGIS and ArcPy scripts from a PostGIS database schema"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
web = [
    "geopandas>=0.14",
    "sqlalchemy>=2.0",
    "folium>=0.16",
    "keplergl>=0.3",
    "pydeck>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "openpyxl>=3.1",
]

[project.scripts]
gis-codegen   = "gis_codegen.cli:main"
gis-catalogue = "gis_codegen.catalogue:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
